<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="170dp"
    android:layout_height="296dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_item_movie_round_corners_8_with_border">

    <ImageView
        android:id="@+id/movie_cover_iv"
        android:layout_width="0dp"
        android:layout_height="248dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/movie"
        android:contentDescription="@string/avengers_title"
        android:layout_margin="2dp"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/movie_cover_iv"
        app:layout_constraintEnd_toEndOf="@id/movie_cover_iv"
        app:layout_constraintTop_toTopOf="@id/movie_cover_iv"
        app:layout_constraintBottom_toBottomOf="@id/movie_cover_iv"
        android:background="@drawable/bg_item_movie_gradient"/>

    <TextView
        android:id="@+id/tv_age_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-black"
        android:textSize="14sp"
        android:text="13+"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/small_margin_padding"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_age_rate"
        app:layout_constraintBottom_toBottomOf="@id/tv_age_rate"
        android:layout_margin="@dimen/small_margin_padding"
        android:src="@drawable/ic_like_heart"
        />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/color_secondary"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/rb_rating"
        app:layout_constraintStart_toStartOf="@id/rb_rating"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/avengers_genre"/>

    <RatingBar
        android:id="@+id/rb_rating"
        style="@style/MovieRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin_padding"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="4"
        android:stepSize="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/movie_cover_iv"
        android:layout_marginBottom="@dimen/small_margin_padding"
        android:layout_marginStart="@dimen/small_margin_padding"/>

    <TextView
        android:id="@+id/tv_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin_padding"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textStyle="bold"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/rb_rating"
        app:layout_constraintStart_toEndOf="@id/rb_rating"
        app:layout_constraintTop_toTopOf="@id/rb_rating"
        android:text="127 review"
        android:fontFamily="sans-serif-black"
        android:layout_marginEnd="@dimen/small_margin_padding"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/movie_cover_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/avengers_title_2"
        android:textSize="16sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@android:color/white"
        android:layout_marginStart="@dimen/small_margin_padding"
        android:layout_marginEnd="@dimen/small_margin_padding"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/tv_movie_length"
        />

    <TextView
        android:id="@+id/tv_movie_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        android:textColor="@color/gray"
        android:textSize="12sp"
        android:fontFamily="sans-serif-black"
        android:text="127 MIN"
        />



</androidx.constraintlayout.widget.ConstraintLayout>