<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg">

    <TextView
        android:id="@+id/tv_movie_list_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_padding"
        android:layout_marginTop="55dp"
        android:drawableStart="@drawable/ic_red_target_cross"
        android:drawablePadding="@dimen/small_margin_padding"
        android:fontFamily="sans-serif-black"
        android:text="Movie list"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movie_item"
        android:layout_width="170dp"
        android:layout_height="296dp"
        android:layout_marginStart="@dimen/default_margin_padding"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_item_movie_round_corners_8_with_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_list_title">

        <ImageView
            android:id="@+id/movie_cover_iv"
            android:layout_width="0dp"
            android:layout_height="248dp"
            android:contentDescription="@string/avengers_title"
            android:src="@mipmap/movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="2dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_item_movie_gradient"
            app:layout_constraintBottom_toBottomOf="@id/movie_cover_iv"
            app:layout_constraintEnd_toEndOf="@id/movie_cover_iv"
            app:layout_constraintStart_toStartOf="@id/movie_cover_iv"
            app:layout_constraintTop_toTopOf="@id/movie_cover_iv" />

        <TextView
            android:id="@+id/tv_age_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin_padding"
            android:fontFamily="sans-serif-black"
            android:text="13+"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bg_dark_gray_round_corners_5"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin_padding"
            android:src="@drawable/ic_like_heart"
            app:layout_constraintBottom_toBottomOf="@id/tv_age_rate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_age_rate" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/avengers_genre"
            android:textColor="@color/color_secondary"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/rb_rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/rb_rating" />

        <RatingBar
            android:id="@+id/rb_rating"
            style="@style/MovieRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_padding"
            android:layout_marginTop="@dimen/small_margin_padding"
            android:layout_marginBottom="@dimen/small_margin_padding"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="4"
            android:stepSize="1"
            app:layout_constraintBottom_toBottomOf="@id/movie_cover_iv"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_padding"
            android:layout_marginEnd="@dimen/small_margin_padding"
            android:fontFamily="sans-serif-black"
            android:text="127 review"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/rb_rating"
            app:layout_constraintStart_toEndOf="@id/rb_rating"
            app:layout_constraintTop_toTopOf="@id/rb_rating" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_padding"
            android:layout_marginEnd="@dimen/small_margin_padding"
            android:fontFamily="sans-serif-black"
            android:text="@string/avengers_title_2"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_cover_iv" />

        <TextView
            android:id="@+id/tv_movie_length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="127 MIN"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>